# tabletop_workspace_opt

./: .gitignore  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: camera_robot.rviz
launch/: camera_tf_testing.launch  demo.launch  intent_recognition.launch  intent_recognizer.launch  transform_testing.launch
msg/: CartesianPose.msg
src/assets/: sawyer_with_electric_gripper.urdf
src/envopt/: legibility_metric.py  legibility_metric_torch.py  map_elites.py
src/envopt/config/: dessert_task.yaml  lego_clearing.yaml  tea_task.yaml
src/sawyer_teleop/: intent_inference.py  intent_viz_tracker.py  joint_velocity_controller.py  joystick_input.py  move_to_cartesian_pose.py  robot_intent_picknplace.py  stitch_object_detection_vt.py
src/shared_autonomy/: intent_inference_node.py  intent_visualization_node.py  joint_velocity_controller.py
src/tabletop_workspace_opt/: intent_visualization_node.py  joystick_teleop_node.py  move_to_cartesian_pose.py  yolo_3d_pose_node.py
srv/: GetPose.srv  MoveToCartesianPose.srv  OperateGripper.srv  SegmentImage.srv
