<?xml version="1.0"?>
<package format="2">
  <name>tabletop_workspace_opt</name>
  <version>0.1.0</version>
  <description>Perception-driven intent recognition and workspace layout optimization for Sawyer.</description>
  <license>MIT</license>
  <maintainer email="anonymous@anonymous.com">Anonymous</maintainer>
  <!-- <url type="website">http://wiki.ros.org/sawyer_teleop</url> -->

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
